apps/base/seerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
        app.kubernetes.io/name: seerr
        app.kubernetes.io/instance: seerr
    spec:
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.1.0
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "400Mi"
          volumeMounts:
            - name: seerr-config
              mountPath: /app/config
              subPath: seerr/config
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr-config-pvc
