apps/base/seerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
spec:
  selector:
    app: seerr
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
      protocol: TCP
