apps/base/seerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
spec:
  ingressClassName: traefik
  rules:
    - host: seerr.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seerr
                port:
                  name: http
