apps/base/seerr/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-route
  namespace: seerr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - seerr.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          port: 5055
